Corrected abode of emptiness to space.

--- a/01_agama/madhyama/MA_176.md
+++ b/01_agama/madhyama/MA_176.md
@@ -40,16 +40,16 @@ next: MA_186.html
 9\. “Furthermore, the dhyāna practitioner’s pleasure ceases and their pain ceases. The basis of joy and sorrow having ceased, they’re neither discomforted nor delighted. Equanimous, mindful, and pure, they attain accomplishment of the fourth dhyāna.
 {:#p9}
 
-10\. “Cultivating right thought in their mind, they then move from the fourth dhyāna toward the abode of measureless emptiness, which is a greater tranquility. That dhyāna practitioner then thinks, ‘My mind has parted with the primary signs [of this samādhi]. It will move to another abode, lose the fourth dhyāna, and its samādhi will cease.’ That dhyāna practitioner doesn’t truly know, ‘My mind is cultivating right thought and delighting in tranquility. It’ll move from the fourth dhyāna toward the abode of measureless emptiness, which is a greater tranquility.’ Not truly knowing that, their mind retreats in this way and loses its samādhi. Thus, the dhyāna practitioner is waxing but says that they are waning.
+10\. “Cultivating right thought in their mind, they then move from the fourth dhyāna toward the abode of measureless space, which is a greater tranquility. That dhyāna practitioner then thinks, ‘My mind has parted with the primary signs [of this samādhi]. It will move to another abode, lose the fourth dhyāna, and its samādhi will cease.’ That dhyāna practitioner doesn’t truly know, ‘My mind is cultivating right thought and delighting in tranquility. It’ll move from the fourth dhyāna toward the abode of measureless space, which is a greater tranquility.’ Not truly knowing that, their mind retreats in this way and loses its samādhi. Thus, the dhyāna practitioner is waxing but says that they are waning.
 {:#p10}
 
-11\. “Furthermore, the dhyāna practitioner crosses over the perception of all forms, ceases the perception of resistance, and doesn’t attend to diverse perceptions to [reach] measureless emptiness, and they accomplish the abode of measureless emptiness.
+11\. “Furthermore, the dhyāna practitioner crosses over the perception of all forms, ceases the perception of resistance, and doesn’t attend to diverse perceptions to [reach] measureless space, and they accomplish the abode of measureless space.
 {:#p11}
 
-12\. “Cultivating right thought in their mind, they then move from the abode of measureless emptiness toward the abode of measureless consciousness, which is a greater tranquility. That dhyāna practitioner then thinks, ‘My mind has parted with the primary signs [of this samādhi]. It will move to another abode, lose the abode of measureless emptiness, and its samādhi will cease.’ That dhyāna practitioner doesn’t truly know, ‘My mind is cultivating right thought and delighting in tranquility. It’ll move from the abode of measureless emptiness to the abode of measureless consciousness, which is a greater tranquility.’ Not truly knowing that, their mind retreats in this way and loses its samādhi. Thus, the dhyāna practitioner is waxing but says that they are waning.
+12\. “Cultivating right thought in their mind, they then move from the abode of measureless space toward the abode of measureless consciousness, which is a greater tranquility. That dhyāna practitioner then thinks, ‘My mind has parted with the primary signs [of this samādhi]. It will move to another abode, lose the abode of measureless space, and its samādhi will cease.’ That dhyāna practitioner doesn’t truly know, ‘My mind is cultivating right thought and delighting in tranquility. It’ll move from the abode of measureless space to the abode of measureless consciousness, which is a greater tranquility.’ Not truly knowing that, their mind retreats in this way and loses its samādhi. Thus, the dhyāna practitioner is waxing but says that they are waning.
 {:#p12}
 
-13\. “Furthermore, the dhyāna practitioner crosses over all the abode of measureless emptiness to measureless consciousness, and they accomplish the abode of measureless consciousness.
+13\. “Furthermore, the dhyāna practitioner crosses over all the abode of measureless space to measureless consciousness, and they accomplish the abode of measureless consciousness.
 {:#p13}
 
 14\. “Cultivating right thought in their mind, they then move from the abode of measureless consciousness toward the abode of nothingness, which is a greater tranquility. That dhyāna practitioner then thinks, ‘My mind has parted with the primary signs [of this samādhi]. It will move to another abode, lose the abode of measureless consciousness, and its samādhi will cease.’ That dhyāna practitioner doesn’t truly know, ‘My mind is cultivating right thought and delighting in tranquility. It’ll move from the abode of measureless consciousness to the abode of nothingness, which is a greater tranquility.’ Not truly knowing that, their mind retreats in this way and loses its samādhi. Thus, the dhyāna practitioner is waxing but says that they are waning.
@@ -84,16 +84,16 @@ next: MA_186.html
 23\. “Furthermore, the dhyāna practitioner’s pleasure ceases and their pain ceases. The basis of joy and sorrow having ceased, they’re neither discomforted nor delighted. Equanimous, mindful, and pure, they attain accomplishment of the fourth dhyāna.
 {:#p23}
 
-24\. “Thinking of another lesser perception, they cultivate the way to the abode of measureless emptiness. That dhyāna practitioner then thinks, ‘My mind is cultivating right thought and delighting in tranquility. It’ll move from the fourth dhyāna to the abode of measureless emptiness, which is a greater tranquility.’ That dhyāna practitioner doesn’t truly know, ‘I’d better consider tiring of perceptions that are associated with entry to the fourth dhyāna. I shouldn’t think of another lesser perception to enter the abode of measureless emptiness.’ Not truly knowing that, they aren’t aware of their mind, and it loses that samādhi. Thus, the dhyāna practitioner is waning but says that they are waxing.
+24\. “Thinking of another lesser perception, they cultivate the way to the abode of measureless space. That dhyāna practitioner then thinks, ‘My mind is cultivating right thought and delighting in tranquility. It’ll move from the fourth dhyāna to the abode of measureless space, which is a greater tranquility.’ That dhyāna practitioner doesn’t truly know, ‘I’d better consider tiring of perceptions that are associated with entry to the fourth dhyāna. I shouldn’t think of another lesser perception to enter the abode of measureless space.’ Not truly knowing that, they aren’t aware of their mind, and it loses that samādhi. Thus, the dhyāna practitioner is waning but says that they are waxing.
 {:#p24}
 
-25\. “Furthermore, the dhyāna practitioner crosses over the perception of all forms, ceases perception of resistance, and doesn’t attend to diverse perceptions to [reach] measureless emptiness, and they accomplish the abode of measureless emptiness.
+25\. “Furthermore, the dhyāna practitioner crosses over the perception of all forms, ceases perception of resistance, and doesn’t attend to diverse perceptions to [reach] measureless space, and they accomplish the abode of measureless space.
 {:#p25}
 
-26\. “Thinking of another lesser perception, they cultivate the way to the abode of measureless consciousness. That dhyāna practitioner then thinks, ‘My mind is cultivating right thought and delighting in tranquility. It’ll move from the abode of measureless emptiness to the abode of measureless consciousness, which is a greater tranquility.’ That dhyāna practitioner doesn’t truly know, ‘I’d better consider tiring of perceptions that are associated with entry the abode of measureless emptiness. I shouldn’t think of another lesser perception to enter the abode of measureless consciousness.’ Not truly knowing that, they aren’t aware of their mind, and it loses that samādhi. Thus, the dhyāna practitioner is waning but says that they are waxing.
+26\. “Thinking of another lesser perception, they cultivate the way to the abode of measureless consciousness. That dhyāna practitioner then thinks, ‘My mind is cultivating right thought and delighting in tranquility. It’ll move from the abode of measureless space to the abode of measureless consciousness, which is a greater tranquility.’ That dhyāna practitioner doesn’t truly know, ‘I’d better consider tiring of perceptions that are associated with entry the abode of measureless space. I shouldn’t think of another lesser perception to enter the abode of measureless consciousness.’ Not truly knowing that, they aren’t aware of their mind, and it loses that samādhi. Thus, the dhyāna practitioner is waning but says that they are waxing.
 {:#p26}
 
-27\. “Furthermore, the dhyāna practitioner crosses over all the abode of measureless emptiness to measureless consciousness, and they accomplish the abode of measureless consciousness.
+27\. “Furthermore, the dhyāna practitioner crosses over all the abode of measureless space to measureless consciousness, and they accomplish the abode of measureless consciousness.
 {:#p27}
 
 28\. “Thinking of another lesser perception, they cultivate the way to the abode of nothingness. That dhyāna practitioner then thinks, ‘My mind is cultivating right thought and delighting in tranquility. It’ll move from the abode of measureless consciousness to the abode of nothingness, which is a greater tranquility.’ That dhyāna practitioner doesn’t truly know, ‘I’d better consider tiring of perceptions that are associated with entry to the abode of measureless consciousness. I shouldn’t think of another lesser perception to enter the abode of nothingness.’ Not truly knowing that, they aren’t aware of their mind, and it loses that samādhi. Thus, the dhyāna practitioner is waning but says that they are waxing.
@@ -119,16 +119,16 @@ next: MA_186.html
 34\. “They don’t accept this practice and don’t attend to these signs and indications. They only practice the requisite attention to perceptions related to past reversals to the abode of measureless consciousness. That dhyāna practitioner thinks, ‘My mind has parted with the primary signs [of this samādhi]. It will move to another abode, lose the abode nothingness, and its samādhi will cease.’ Having truly known this, they don’t retreat in this way, and their mind doesn’t lose its samādhi. Thus, the dhyāna practitioner is waning and truly knows that they are waning.
 {:#p34}
 
-35\. “Furthermore, the dhyāna practitioner’s practice, signs, and indications cross over all the abode of measureless emptiness to measureless consciousness, and they accomplish the abode of measureless consciousness.
+35\. “Furthermore, the dhyāna practitioner’s practice, signs, and indications cross over all the abode of measureless space to measureless consciousness, and they accomplish the abode of measureless consciousness.
 {:#p35}
 
-36\. “They don’t accept this practice and don’t attend to these signs and indications. They only practice the requisite attention to perceptions related to past reversals to the abode of measureless emptiness. That dhyāna practitioner thinks, ‘My mind has parted with the primary signs [of this samādhi]. It will move to another abode, lose the abode measureless consciousness, and its samādhi will cease.’ Having truly known this, they don’t retreat in this way, and their mind doesn’t lose its samādhi. Thus, the dhyāna practitioner is waning and truly knows that they are waning.
+36\. “They don’t accept this practice and don’t attend to these signs and indications. They only practice the requisite attention to perceptions related to past reversals to the abode of measureless space. That dhyāna practitioner thinks, ‘My mind has parted with the primary signs [of this samādhi]. It will move to another abode, lose the abode measureless consciousness, and its samādhi will cease.’ Having truly known this, they don’t retreat in this way, and their mind doesn’t lose its samādhi. Thus, the dhyāna practitioner is waning and truly knows that they are waning.
 {:#p36}
 
-37\. “Furthermore, the dhyāna practitioner’s practice, signs, and indications cross over the perception of all forms, ceases perception of resistance, and doesn’t attend to diverse perceptions to [reach] measureless emptiness, and they accomplish the abode of measureless emptiness.
+37\. “Furthermore, the dhyāna practitioner’s practice, signs, and indications cross over the perception of all forms, ceases perception of resistance, and doesn’t attend to diverse perceptions to [reach] measureless space, and they accomplish the abode of measureless space.
 {:#p37}
 
-38\. “They don’t accept this practice and don’t attend to these signs and indications. They only practice the requisite attention to perceptions related to past reversals to the pleasures of form. That dhyāna practitioner thinks, ‘My mind has parted with the primary signs [of this samādhi]. It will move to another abode, lose the abode of measureless emptiness, and its samādhi will cease.’ Having truly known this, they don’t retreat in this way, and their mind doesn’t lose its samādhi. Thus, the dhyāna practitioner is waning and truly knows that they are waning.
+38\. “They don’t accept this practice and don’t attend to these signs and indications. They only practice the requisite attention to perceptions related to past reversals to the pleasures of form. That dhyāna practitioner thinks, ‘My mind has parted with the primary signs [of this samādhi]. It will move to another abode, lose the abode of measureless space, and its samādhi will cease.’ Having truly known this, they don’t retreat in this way, and their mind doesn’t lose its samādhi. Thus, the dhyāna practitioner is waning and truly knows that they are waning.
 {:#p38}
 
 39\. “Furthermore, the dhyāna practitioner’s practice, signs, and indications cease their pleasure and cease their pain. The basis of joy and sorrow having ceased, they are neither discomforted nor delighted. Equanimous, mindful, and pure, they attain accomplishment of the fourth dhyāna.
@@ -177,16 +177,16 @@ next: MA_186.html
 53\. “Furthermore, the dhyāna practitioner’s pleasure ceases and their pain ceases. The basis of joy and sorrow having ceased, they’re neither discomforted nor delighted. Equanimous, mindful, and pure, they attain accomplishment of the fourth dhyāna.
 {:#p53}
 
-54\. “Their mind cultivates right thought and delights in tranquility, then it moves from the fourth dhyāna toward the abode of measureless emptiness, which is a greater tranquility. That dhyāna practitioner thinks, ‘My mind is cultivating right thought and delighting in tranquility. It will move from the fourth dhyāna to the abode of measureless emptiness, which is a greater tranquility.’ Truly knowing this, they are aware of their mind, and it doesn’t lose its samādhi. Thus, the dhyāna practitioner is waxing and truly knows that they are waxing.
+54\. “Their mind cultivates right thought and delights in tranquility, then it moves from the fourth dhyāna toward the abode of measureless space, which is a greater tranquility. That dhyāna practitioner thinks, ‘My mind is cultivating right thought and delighting in tranquility. It will move from the fourth dhyāna to the abode of measureless space, which is a greater tranquility.’ Truly knowing this, they are aware of their mind, and it doesn’t lose its samādhi. Thus, the dhyāna practitioner is waxing and truly knows that they are waxing.
 {:#p54}
 
-55\. “Furthermore, the dhyāna practitioner crosses over the perception of all forms, ceases perception of resistance, and doesn’t attend to diverse perceptions to [reach] measureless emptiness, and they accomplish the abode of measureless emptiness.
+55\. “Furthermore, the dhyāna practitioner crosses over the perception of all forms, ceases perception of resistance, and doesn’t attend to diverse perceptions to [reach] measureless space, and they accomplish the abode of measureless space.
 {:#p55}
 
-56\. “Their mind cultivates right thought and delights in tranquility, then it moves from the abode of measureless emptiness toward the abode of measureless consciousness, which is a greater tranquility. That dhyāna practitioner thinks, ‘My mind is cultivating right thought and delighting in tranquility. It will move from the abode of measureless emptiness to the abode of measureless consciousness, which is a greater tranquility.’ Truly knowing this, they are aware of their mind, and it doesn’t lose its samādhi. Thus, the dhyāna practitioner is waxing, and truly knows that they are waxing.
+56\. “Their mind cultivates right thought and delights in tranquility, then it moves from the abode of measureless space toward the abode of measureless consciousness, which is a greater tranquility. That dhyāna practitioner thinks, ‘My mind is cultivating right thought and delighting in tranquility. It will move from the abode of measureless space to the abode of measureless consciousness, which is a greater tranquility.’ Truly knowing this, they are aware of their mind, and it doesn’t lose its samādhi. Thus, the dhyāna practitioner is waxing, and truly knows that they are waxing.
 {:#p56}
 
-57\. “Furthermore, the dhyāna practitioner crosses over all the abode of measureless emptiness to measureless consciousness, and they accomplish the abode of measureless consciousness.
+57\. “Furthermore, the dhyāna practitioner crosses over all the abode of measureless space to measureless consciousness, and they accomplish the abode of measureless consciousness.
 {:#p57}
 
 58\. “Their mind cultivates right thought and delights in tranquility, then it moves from the abode of measureless consciousness toward the abode of nothingness, which is a greater tranquility. That dhyāna practitioner thinks, ‘My mind is cultivating right thought and delighting in tranquility. It will move from the abode of measureless consciousness to the abode of nothingness, which is a greater tranquility.’ Truly knowing this, they are aware of their mind, and it doesn’t lose its samādhi. Thus, the dhyāna practitioner is waxing, and truly knows that they are waxing.
