Corrected translation of three samadhis (=> without aspirations, without attributes).

--- a/01_agama/ekottarika/43/EA_43_5.md
+++ b/01_agama/ekottarika/43/EA_43_5.md
@@ -123,7 +123,7 @@ And now they will destroy your army.’
 28\. “Māra said to me, ‘What’s your reason for destroying these conceits?’
 {: #p28}
 
-“I replied, ‘Pāpīyān, you should know, there are the concentration of kindness, concentration of compassion, concentration of joy, and concentration of equanimity and the concentration of emptiness, concentration without aspirations, and concentration without signs. From the concentration caused by kindness, the concentration of compassion is discerned. Conditioned by the concentration of compassion, the concentration of joy is attained. Conditioned by the concentration of joy, the concentration of equanimity is attained. From the concentration of emptiness, the concentration without aspirations is attained. Because of the concentration without aspirations, the concentration without signs is attained. Using the power of these concentrations, I will do battle with you. When their practice is complete, then suffering will be ended. When suffering is ended, then the bonds will be ended. When the bonds are ended, then I’ll attain Nirvāṇa.’
+“I replied, ‘Pāpīyān, you should know, there are the concentration of kindness, concentration of compassion, concentration of joy, and concentration of equanimity and the concentration of emptiness, concentration without aspirations, and concentration without attributes. From the concentration caused by kindness, the concentration of compassion is discerned. Conditioned by the concentration of compassion, the concentration of joy is attained. Conditioned by the concentration of joy, the concentration of equanimity is attained. From the concentration of emptiness, the concentration without aspirations is attained. Because of the concentration without aspirations, the concentration without attributes is attained. Using the power of these concentrations, I will do battle with you. When their practice is complete, then suffering is ended. When suffering is ended, then the bonds are ended. When the bonds are ended, then I’ll attain Nirvāṇa.’
 
 29\. “Māra said to me, ‘Ascetic, you’ll destroy the teaching with the teaching?’
 
@@ -172,7 +172,7 @@ And now they will destroy your army.’
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 7 July 2021
+Last Revised: 8 February 2022
 {: .revised}
 
 ---
