--- a/01_agama/madhyama/MA_031.md
+++ b/01_agama/madhyama/MA_031.md
@@ -253,7 +253,7 @@ Of suffering, accumulation, cessation, and the path.”
 {:#p71}
 
 ### Notes
-1. {:#n1} The direct parallel for this sutra is [MN 141](https://suttacentral.net/mn141). {: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} The direct parallel for this sutra is [MN 141](https://suttacentral.net/mn141){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
