--- a/01_agama/madhyama/MA_017.md
+++ b/01_agama/madhyama/MA_017.md
@@ -76,7 +76,7 @@ Gāminī answered, “No, Bhagavān.”
 {: #p17}
 
 ### Notes
-1. {:#n1} The direct parallel for this sutra is [SN 42.6](https://suttacentral.net/sn42.6). This version differs mainly in having a different opening narrative, depicting a god approaching the Buddha with a question rather than the headman of a village. {: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} The direct parallel for this sutra is [SN 42.6](https://suttacentral.net/sn42.6){: target="_blank"}. This version differs mainly in having a different opening narrative, depicting a god approaching the Buddha with a question rather than the headman of a village. . [\[back\]](#ref1)
 
 ---
 
