--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -85,7 +85,7 @@ next: MA_017.html
 23\. “Their mind fully pervades one direction with kindness. They do this in two, three, and four directions, the four counterpoints, up, and down. Their mind completely pervades them all with kindness. They are without bondage, enmity, anger, or dispute. Broadly, greatly, and measurelessly well cultivated, they fully pervade the whole world.
 {:#p23}
 
-24/. “Thus it is with compassion, joy, and equanimity. They are without bondage, without enmity, without anger, and without dispute. Broadly, greatly, and measurelessly well cultivated, they fully pervade the whole world.
+24\. “Thus it is with compassion, joy, and equanimity. They are without bondage, without enmity, without anger, and without dispute. Broadly, greatly, and measurelessly well cultivated, they fully pervade the whole world.
 {:#p24}
 
 ### The Four Peaceful Dwellings
