Reformated SA indices, revised SA 1.1-10, added MA 210.

--- a/01_agama/samyukta/01/SA1_1.md
+++ b/01_agama/samyukta/01/SA1_1.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 1. Impermanent'
+title: 'The Related Discourses | 1. The Aggregates | 1 (1). Impermanent'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,18 +9,18 @@ next: SA1_2.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 1. Impermanent
+### 1 (1). Impermanent
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You should observe that form is impermanent. Such observation then is right view.[\[2\]](#n2){:#ref2} Correctly observing it gives rise to disillusionment. Being disillusioned, delight and greed [for form] will end. When delight and greed [for form] have ended, that’s said to be the mind’s liberation.
+2\. It was then that the Bhagavān addressed the monks, “One should observe that form is impermanent. Observing it in this way is right view. Correctly observing it gives rise to disillusionment. When someone is disillusioned, delight and greed end. When delight and greed end, I say their mind is liberated.
 {: #p2}
 
-3\. “Thus, observe that feeling … perception … volition … consciousness is impermanent. Such observation then is right view. Correctly observing it gives rise to disillusionment. Being disillusioned, delight and greed [for consciousness] will end. When delight and greed [for consciousness] have ended, that’s said to be the mind’s liberation.
+3\. “Thus observe that feeling … perception … volition … consciousness is impermanent. Observing it in this way is right view. Correctly observing it gives rise to disillusionment. When someone is disillusioned, delight and greed end. When delight and greed end, I say their mind is liberated.
 {:#p3}
 
-4\. “Thus, monks, someone wanting to realize the mind's liberation for themselves can then realize it: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+4\. “Thus, monks, someone who wants to realize the mind’s liberation for themselves can then realize: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
 
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -28,14 +28,13 @@ next: SA1_2.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. The next three sūtras are variants that follow this template while substituting the other three marks (“painful,” “empty,” and “not self”) for “impermanent.” [\[back\]](#ref1)
-2. {:#n2} *right view*. Yinshun amends *correct observation* to *right view* in this sūtra citing the nearly identical passages at [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"} and SĀ 2.1. [\[back\]](#ref2)
+1. {:#n1} This sūtra has been reconstituted following the description found at T99.2.1a14. Close Pali parallels are [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"}, [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}, and [SĀ 2.1](../02/SA2_1.html){:target="_blank"} are close parallels. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 April 2021
+Last Revised: 14 March 2022
 {: .revised}
 
 ---
