--- a/01_agama/samyukta/01/SA1_5.md
+++ b/01_agama/samyukta/01/SA1_5.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 5. Correctly Considered'
+title: 'The Related Discourses | 1. The Aggregates | 5 (2). Correctly Considered'
 type: kramdown
 base: ../../../
 previous: SA1_4.html
@@ -9,32 +9,32 @@ next: SA1_6.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 5. Correctly Contemplated
+### 5 (2). Correctly Contemplated
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You should correctly contemplate form, observe that form is impermanent, and truly know it. Why is that? Monks, when form is correctly contemplated, observed to be impermanent, and truly known, that stops desire and greed for form. When desire and greed [for form] are stopped, that’s said to be the mind’s liberation.
+2\. It was then that the Bhagavān addressed the monks, “One should correctly contemplate form, observe that form is impermanent, and truly know it. Why is that?^Monks, when someone correctly contemplates form, observes it to be impermanent, and truly knows it, they stop desire and greed for form. When someone stops desire and greed, I say their mind is liberated.
 {:#p2}
 
-3\. “Thus, you should correctly contemplate feeling … perception … volition … consciousness, observe that consciousness is impermanent, and truly know it. Why is that? When consciousness is correctly contemplated, observed to be impermanent, and truly known, that stops desire and greed for consciousness. When desire and greed [for consciousness] are stopped, that’s said to be the mind’s liberation.
+3\. “Thus, one should correctly contemplate feeling … perception … volition … consciousness, observe that consciousness is impermanent, and truly know it. Why is that?^When someone correctly contemplates consciousness, observes it to be impermanent, [and truly knows it], they stop desire and greed for consciousness. When someone stops desire and greed, I say their mind is liberated.
 {:#p3}
 
-4\. “Thus, someone wanting to realize the mind's liberation for themselves can then realize it: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”[\[2\]](#n2){:#ref2}
+4\. “Thus, someone who wants to realize the mind’s liberation for themselves can then realize it: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”[\[2\]](#n2){:#ref2}
 {:#p4}
 
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p5}
 
 ### Notes
-1. {:#n1} This sūtra is parallel with [SN 22.52](https://suttacentral.net/sn22.52){:target="_blank"} and SĀ 2.5. [\[back\]](#ref1)
-2. {:#n2} The *Taisho* edition includes a note describing variant sūtras identical to the one found in SĀ 1.1; however, these variants would be inconsistent with the summary verse at the end of SĀ 1.10, and the parallel sūtra at SĀ 2.5 doesn’t have these variants. I have followed Yinshun’s lead in removing the note. [\[back\]](#ref2)
+1. {:#n1} This sūtra is parallel with [SN 22.52](https://suttacentral.net/sn22.52){:target="_blank"} and [SĀ 2.5](../02/sa2_5.html){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} The *Taisho* edition includes a note describing variant sūtras identical to the one found in [SĀ 1.1](sa1_1.html){:target="_blank"}; however, these variants would be inconsistent with the summary verse at the end of [SĀ 1.10](sa1_10.html){:target="_blank"}, and the parallel sūtra at [SĀ 2.5](../02/sa2_5.html){:target="_blank"} doesn’t have these variants. I have followed Yinshun’s lead in removing the note. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 April 2021
+Last Revised: 15 March 2022
 {: .revised}
 
 ---
