--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -4,7 +4,7 @@ title: 'The Medium Discourses | Chapter 17: Potalaka | 204. Raṃbhaka'
 type: kramdown
 base: ../../../
 previous: MA_200.html
-next: index.html
+next: MA_210.html
 ---
 
 # [The Medium Discourses](index.html)
