--- a/01_agama/samyukta/01/SA1_10.md
+++ b/01_agama/samyukta/01/SA1_10.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 10. Delighting in Form'
+title: 'The Related Discourses | 1. The Aggregates | 10 (7). Delighting in Form'
 type: kramdown
 base: ../../../
 previous: SA1_9.html
@@ -9,15 +9,15 @@ next: SA1_11.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 10. Delighting in Form
+### 10 (7). Delighting in Form
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you delight in form, you delight in suffering. Delighting in suffering, it’s not possible to be liberated from suffering. Thus, when you delight in feeling … perception … volition … consciousness, you delight in suffering. Delighting in suffering, it’s not possible to be liberated from suffering.
+2\. It was then that the Bhagavān addressed the monks, “When one delights in form, they delight in suffering. When one delights in suffering, they can’t be liberated from suffering. Thus, when one delights in feeling … perception … volition … consciousness, they delight in suffering. When one delights in suffering, they can’t be liberated from suffering.
 {:#p2}
 
-3\. “Monks, when you don’t delight in form, you don’t delight in suffering. Not delighting in suffering, it’s possible to be liberated from suffering. Thus, when you don’t delight in feeling … perception … volition … consciousness, you don’t delight in suffering. Not delighting in suffering, it’s possible to be liberated from suffering.”
+3\. “Monks, when someone doesn’t delight in form, they don’t delight in suffering. When someone doesn’t delight in suffering, they can be liberated from suffering. Thus, when someone doesn’t delight in feeling … perception … volition … consciousness, they don’t delight in suffering. When someone doesn’t delight in suffering, they can be liberated from suffering.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
