--- a/01_agama/samyukta/01/SA1_6.md
+++ b/01_agama/samyukta/01/SA1_6.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 6. Not Knowing'
+title: 'The Related Discourses | 1. The Aggregates | 6 (3). Not Knowing'
 type: kramdown
 base: ../../../
 previous: SA1_5.html
@@ -9,28 +9,28 @@ next: SA1_7.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 6. Not Knowing
+### 6 (3). Not Knowing
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you don’t know or understand form and [1b] don’t stop or become free of desire for it, it’s not possible to stop suffering. Thus, when you don’t know or understand feeling … perception … volition … consciousness and don’t stop or become free of desire for it, it’s not possible to stop suffering.
+2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and doesn’t stop or become free of desire for it, it’s not possible to stop suffering. Thus, when one doesn’t know or understand feeling … perception … volition … consciousness and doesn’t stop or become free of desire for it, it’s not possible to stop suffering.
 {:#p2}
 
-3\. “Monks, if you know and understand form and stop and become free of desire for it, it’s possible to stop suffering. Thus, if you know and understand feeling … perception … volition … consciousness and stop and become free of desire for it, it’s possible to end suffering.”
+3\. “Monks, if someone knows and understands form and stops and becomes free of desire for it, it’s possible to stop suffering. Thus, if someone knows and understands feeling … perception … volition … consciousness and stops and becomes free of desire for it, it’s possible to end suffering.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
 ### Notes
-1. {:#n1} This sūtra is parallel with [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and SĀ 2.6. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and [SĀ 2.6](../02/sa2_6.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 April 2021
+Last Revised: 15 March 2022
 {: .revised}
 
 ---
