--- a/01_agama/samyukta/01/SA1_7.md
+++ b/01_agama/samyukta/01/SA1_7.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 7. Not Knowing (2)'
+title: 'The Related Discourses | 1. The Aggregates | 7 (4). Not Knowing (2)'
 type: kramdown
 base: ../../../
 previous: SA1_6.html
@@ -9,28 +9,28 @@ next: SA1_8.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 7. Not Knowing (2)
+### 7 (4). Not Knowing (2)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you don’t know or understand form and don’t stop or become free of desire for it, the mind isn’t liberated, and it’s not possible to transcend the fear of birth, old age, illness, and death. Thus, when you don’t know or understand feeling … perception … volition … consciousness and don’t stop or become free of desire for it, the mind isn’t liberated, and it’s not possible to transcend the fear of birth, old age, illness, and death.
+2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and don’t stop or become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death. Thus, when one doesn’t know or understand feeling … perception … volition … consciousness and doesn’t stop or become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death.
 {:#p2}
 
-3\. “Monks, if you know and understand form and stop and become free of desire for it, the mind is liberated, and it’s possible to transcend the fear of birth, old age, illness, and death. Thus, if you know and understand feeling … perception … volition … consciousness and stop and become free of desire for it, the mind is liberated, and it’s possible to transcend the fear of birth, old age, illness, and death.”
+3\. “Monks, if someone knows and understands form and stops and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death. Thus, if someone knows and understands feeling … perception … volition … consciousness and stops and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
 ### Notes
-1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with SĀ 2.7. [\[back\]](#ref1)
+1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with [SĀ 2.7](../02/SA2_7.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 April 2021
+Last Revised: 15 March 2022
 {: .revised}
 
 ---
