--- a/01_agama/samyukta/01/SA1_8.md
+++ b/01_agama/samyukta/01/SA1_8.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 8. Not Knowing (3)'
+title: 'The Related Discourses | 1. The Aggregates | 8 (5). Not Knowing (3)'
 type: kramdown
 base: ../../../
 previous: SA1_7.html
@@ -9,28 +9,28 @@ next: SA1_9.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 8. Not Knowing (3)
+### 8 (5). Not Knowing (3)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you don’t know or understand form and don’t become free of desire for it, the mind isn’t liberated. When the mind isn’t liberated, it’s not possible to stop suffering. Thus, when you don’t know or understand feeling … perception … volition … consciousness and don’t become free of desire for it, the mind isn’t liberated, and it’s not possible to stop suffering.
+2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and doesn’t become free of desire for it, their mind isn’t liberated. Their mind not being liberated, they can’t stop suffering. Thus, when one doesn’t know or understand feeling … perception … volition … consciousness and doesn’t become free of desire for it, their mind isn’t liberated, and then they can’t stop suffering.
 {:#p2}
 
-3\. “Monks, if you know and understand form and become free of desire for it, the mind is liberated, and it’s possible to stop suffering. Thus, if you know and understand feeling … perception … volition … consciousness and become free of desire for it, the mind is liberated, and it’s possible to [1c] stop suffering.”
+3\. “Monks, if someone knows and understands form and becomes free of desire for it, their mind is liberated, and then they can stop suffering. Thus, if someone knows and understands feeling … perception … volition … consciousness and becomes free of desire for it, their mind is liberated, and then they can stop suffering.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
 ### Notes
-1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with SĀ 2.8. The *Taisho* version of this sutra copies content from SĀ 1.10 into its beginning, making it a “double sūtra.” I’ve followed Yinshun’s lead in deleting this material as spurious on the grounds that the uddāna for this group of sūtras only mentions one sūtra on delight. We should also note that SĀ 2.8 would be a strong parallel if we delete the added material, which then maintains the pattern of SĀ 1.1-10 corresponding closely to SĀ 2.1-10. [\[back\]](#ref1)
+1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with SĀ 2.8. The *Taisho* version of this sutra copies content from SĀ 1.10 (7) into its beginning. I’ve followed Yinshun’s lead in deleting this material as spurious on the grounds that the uddāna for this group of sūtras only mentions one sūtra on delight. We should also note that [SĀ 2.8](../02/SA2_8.html){:target="_blank"} would be a strong parallel if we delete the added material, which then maintains the pattern of SĀ 1.1-10 corresponding closely to SĀ 2.1-10. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 April 2021
+Last Revised: 16 March 2022
 {: .revised}
 
 ---
