--- a/01_agama/samyukta/01/SA1_9.md
+++ b/01_agama/samyukta/01/SA1_9.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 9. Not Knowing (4)'
+title: 'The Related Discourses | 1. The Aggregates | 9 (6). Not Knowing (4)'
 type: kramdown
 base: ../../../
 previous: SA1_8.html
@@ -9,15 +9,15 @@ next: SA1_10.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 9. Not Knowing (4)
+### 9 (6). Not Knowing (4)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you don’t know or understand form and don’t become free of desire for it, the mind isn’t liberated, and it’s not possible to transcend the fear of birth, old age, illness, and death. Thus, when you don’t know or understand feeling … perception … volition … consciousness and don’t become free of desire for it, the mind isn’t liberated, and it’s not possible to transcend the fear of birth, old age, illness, and death.
+2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and doesn’t become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death. Thus, when one doesn’t know or understand feeling … perception … volition … consciousness and doesn’t become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death.
 {:#p2}
 
-3\. “Monks, if you know and understand form and become free of desire for it, the mind is liberated, and it’s possible to transcend the fear of birth, old age, illness, and death. Thus, if you know and understand feeling … perception … volition … consciousness and become free of desire for it, the mind is liberated, and it’s possible to transcend the fear of birth, old age, illness, and death.”
+3\. “Monks, if someone knows and understands form and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death. Thus, if someone knows and understands feeling … perception … volition … consciousness and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -30,7 +30,7 @@ next: SA1_10.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 April 2021
+Last Revised: 16 March 2022
 {: .revised}
 
 ---
