Fixed an inconsistency.

--- a/01_agama/madhyama/MA_210.md
+++ b/01_agama/madhyama/MA_210.md
@@ -86,10 +86,10 @@ The nun Dharmadinnā answered, “It’s not the noble eightfold path that inclu
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
-14\. Again, she asked, “Noble one, does extinguishment have an opposite?”
+14\. Again, she asked, “Noble one, does extinguishment have a counterpart?”
 {:#p14}
 
-The nun Dharmadinnā answered, “Extinguishment has no opposite.”
+The nun Dharmadinnā answered, “Extinguishment has no counterpart.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
