Added DA 1, editing SA 1.11-14.

--- a/01_agama/samyukta/01/SA1_14.md
+++ b/01_agama/samyukta/01/SA1_14.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 14. Past (4)'
+title: 'The Related Discourses | 1. The Aggregates | 14 (8). The Past Is Not Self'
 type: kramdown
 base: ../../../
 previous: SA1_13.html
@@ -9,15 +9,15 @@ next: SA1_15.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 14. Past (4)
+### 14 (8). The Past Is Not Self
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Past and future form is not self, so why wouldn’t present form? Noble disciples thus observe them. They don’t look back to past form, don’t wish for future form, and become disillusioned and free of desire for present form. They’re correctly headed toward its complete cessation.
+2\. It was then that the Bhagavān addressed the monks, “Past and future form is not self, so why wouldn’t that be for present form? Noble disciples who thus observe them don’t look back to past form or wish for future form. Regarding present form, they become disillusioned, free of desire, and properly headed for its cessation.
 {:#p2}
 
-3\. “Thus, past and future feeling … perception … volition … consciousness is not self, so why wouldn’t present consciousness? Noble disciples thus observe them. They don’t look back to past consciousness, don’t wish for future consciousness, and become disillusioned and free of desire for present consciousness. They’re correctly headed toward complete cessation.”
+3\. “Thus, past and future feeling … perception … volition … consciousness is not self, so why wouldn’t that be for present feeling … perception … volition … consciousness? Noble disciples who thus observe them don’t look back to past consciousness or wish for future consciousness. Regarding present consciousness, they become disillusioned, free of desire, and properly headed for its cessation.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -30,7 +30,7 @@ next: SA1_15.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 April 2021
+Last Revised: 17 April 2022
 {: .revised}
 
 ---
