--- a/01_agama/dirgha/DA_29.md
+++ b/01_agama/dirgha/DA_29.md
@@ -4,7 +4,7 @@ title: The Long Discourses | 29. Lohitya
 type: kramdown
 base: ../../
 previous: DA_28.html
-next: index.html
+next: DA_30-1.html
 ---
 # [The Long Discourses](index.html)
 ### 29. Lohitya
